--- a/imports/imports.sass
+++ b/imports/imports.sass
@@ -1,1 +1,1 @@
-@import url('bower_components/font-awesome/scss/font-awesome.scss')
+//@import url('bower_components/font-awesome/css/font-awesome.css')
