--- a/css/banner.css
+++ b/css/banner.css
@@ -12,14 +12,28 @@ img {
       width: 50%;
       margin-top: 18%; }
     .banner .apresentacao {
-      font-size: 0.8em; } }
+      font-size: 0.8em;
+      width: 90% !important; } }
 @media screen and (max-width: 768px) {
   .banner .apresentacao {
     font-size: 0.7em; }
 
   .device {
     display: none; } }
+.banner-fundo {
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  background-color: #DDF3FF;
+  background-image: -webkit-gradient(linear, 180deg, from(#4CCEFF), to(#DDF3FF));
+  background-image: -webkit-linear-gradient(180deg, #4CCEFF, #DDF3FF);
+  background-image: -moz-linear-gradient(180deg, #4CCEFF, #DDF3FF);
+  background-image: -ms-linear-gradient(180deg, #4CCEFF, #DDF3FF);
+  background-image: -o-linear-gradient(180deg, #4CCEFF, #DDF3FF);
+  background-image: linear-gradient(180deg, #4CCEFF, #DDF3FF); }
+
 .banner {
+  opacity: 0.8;
   width: 100%;
   height: 300px;
   background-image: url("/WFInformatica/images/fundo.png");
@@ -44,3 +58,8 @@ img {
   .banner .device {
     width: 30%;
     margin-left: 15%; }
+
+.marcas {
+  float: right; }
+  .marcas img {
+    justify-content: flex-end; }
