--- a/imports/colors.sass
+++ b/imports/colors.sass
@@ -2,5 +2,10 @@ $azul: #8a7ea6
 $amareloEscuro: #f6e621
 $amareloClaro: #e4da2b
 $marromMostarda: #a49b55
+$cinza: #bebebe
 $black: #0e0e0e
 $white: #fff 
+
+//Colors gradient banner
+$azul-tom1: #4CCEFF
+$azul-tom2: #DDF3FF
