--- a/imports/colors.sass
+++ b/imports/colors.sass
@@ -5,7 +5,8 @@ $marromMostarda: #a49b55
 $cinza: #bebebe
 $black: #0e0e0e
 $white: #fff 
-
+//footer div de serviços
+$cinza-claro: #D4D4D4
 //Colors gradient banner
 $azul-tom1: #4CCEFF
 $azul-tom2: #DDF3FF
